--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
-<seed-menu [items]="menuItems"></seed-menu>
+<!-- <seed-menu [items]="menuItems"></seed-menu>
 <div class="container">
     <router-outlet></router-outlet>
-</div>
+</div> -->
+<router-outlet></router-outlet>
