--- a/src/app/app.component.tns.html
+++ b/src/app/app.component.tns.html
@@ -1,8 +1,9 @@
-<GridLayout rows="auto, *">
+<!-- <GridLayout rows="auto, *">
     <StackLayout>
         <seed-menu [items]="menuItems"></seed-menu>
     </StackLayout>
     <StackLayout class="container" row="1">
         <router-outlet></router-outlet>
     </StackLayout>
-</GridLayout>
+</GridLayout> -->
+<router-outlet></router-outlet>
